<?xml version="1.0"?>
<package>
  <name>irobotcreate_pid</name>
  <version>0.0.0</version>
  <description>The irobotcreate_pid package</description>

  <maintainer email="baseballercalvin@gmail.com">Calvin Wan</maintainer>

  <license>BSD</license>

  <author email="baseballercalvin@gmail.com">Calvin Wan</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
